--- a/src/pages/MovieDetails/MovieDetails.module.css
+++ b/src/pages/MovieDetails/MovieDetails.module.css
@@ -23,7 +23,7 @@
 }
 
 .img {
-  width: '300px';
+  width: 300px;
   border: none;
   margin-right: 20px;
   border-radius: 30px;
@@ -32,11 +32,12 @@
 
 .title {
   color: #616472;
-  height: 37px;
+  height: auto;
   box-shadow: 5px 5px 10px 0 #babecc, -5px -5px 10px 0 #fff;
   margin-top: 0px;
   text-align: center;
   border-radius: 30px;
+  padding: 10px;
 }
 
 .score {
